force-app/main/default/objects/PDF_Name_Setting__mdt/PDF_Name_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata will allow admins to manage and update any file and attachment names to be referenced in code.</description>
    <label>PDF Name Setting</label>
    <pluralLabel>PDF Name Settings</pluralLabel>
</CustomObject>