force-app/main/default/objects/PDF_Name_Setting__mdt/fields/PDF_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Department_Name__c</fullName>
    <inlineHelpText>If the user belongs to this department, the corresponding pdf file name will be sent.</inlineHelpText>
    <label>Department Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>