force-app/main/default/objects/PDF_Name_Setting__mdt/fields/PDF_File_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_File_Name__c</fullName>
    <inlineHelpText>The actual name of the pdf to be sent</inlineHelpText>
    <label>PDF File Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>