force-app/main/default/objects/PDF_Name_Setting__mdt/fields/PDF_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Template_Name__c</fullName>
    <inlineHelpText>Please enter the name of the template that needs to be sent.</inlineHelpText>
    <label>Template Unique Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>